deployment/stacks/service/base/template/network-policies/allow-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: PROJECT_GROUP_SHORT_TO_REPLACE-PROJECT_NAME_SHORT_TO_REPLACE-K8S_JOB_NAME_TO_REPLACE-allow-egress
spec:
  podSelector:
    matchLabels:
      app: PROJECT_GROUP_SHORT_TO_REPLACE-PROJECT_NAME_SHORT_TO_REPLACE-K8S_JOB_NAME_TO_REPLACE
  policyTypes:
    - Egress
  egress:
    - to: []
      ports:
        # Allow access to RDS Postgres Database
        - protocol: TCP
          port: DB_PORT_TO_REPLACE
